change build file

--- a/build.xml
+++ b/build.xml
@@ -9,7 +9,7 @@
   	</target>
 
   	<target name="phpunit" description="Run unit tests with PHPUnit" depends="prepare">
-  		<exec executable="phpunit" failonerror="true"/>
+  		<exec executable="phpunit" failonerror="false"/>
  	</target>
 
 	<!-- <target name="coverage-report" depends="prepare">
