--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -10,8 +10,8 @@
     convertWarningsToExceptions = "true"
     processIsolation            = "false"
     stopOnFailure               = "false"
-    syntaxCheck                 = "false"
-    bootstrap                   = "bootstrap.php.cache" >
+    syntaxCheck                 = "false" >
+    <!-- bootstrap                   = "bootstrap.php.cache" > -->
 
     <testsuites>
         <testsuite name="Project Test Suite">
